# agentis-adapter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  adapter_claudecode.sh  adapter_opencode.sh  claudecode.py  hello.txt  hello_world.txt  job.yaml  opencode.json  opencode.json.tpl  opencode_api.json  opencode_cli.py  pyproject.toml  ratelimits.py  run-claude.sh  run-opencode-cli.sh  run-opencode.sh  setup-local.sh  setup.sh  test1.py  tunnel.sh
.agentis/: ci.yaml  deploy.yaml  label-code-tasks-state.json  local-setup.sh  opencode-project.yaml  opencode.yaml  run.yaml
agentiscode/: __init__.py  adapter.py  api.py  cli.py  session_manager.py
app/: __init__.py  adapter_api.py  agentiscode.py  claudecode_adapter.py  cli.py
claude/: activity_mapper.py  adapter.py  api.py  client.py  session_manager.py
claude_p/: adapter.py  api.py  client.py  session_manager.py
common/: adapter_app.py  adapter_base.py  agentis.py  agentis_telemetry.py  agentiscode.py  attachments.py  cli_adapter.py  cli_session.py  config.py  git_adapter.py  kubernetes_runtime.py  local_setup.py  models.py  namespaces.py  opencode_rest_client.py  session_manager.py  shutdown.py  status.py
docs/: adapter.md  development.md  koncept-local-workflow-executor.md  workflow.md
opencode/: __init__.py  activity_mapper.py  adapter.py  api.py  runner.py  session_manager.py  utils.py
opencode-container/: .dockerignore  Dockerfile  build  claude-p
scripts/: cleanup_source_snapshots.sh  create_agdoc_tasks.py  create_knowledge_extract_task.py  slack_stream.py  (+3 more)
(+95 files in other folders)
